--- a/app/views/locations/show.html.erb
+++ b/app/views/locations/show.html.erb
@@ -8,6 +8,8 @@
   <%= @location.full_street_address %> <small><%= link_to fa_icon('pencil', text: 'Edit'), edit_location_path(@location) %></small>
 </p>
 
+<div id="map-canvas"></div>
+
 <h3>The closest buses are...</h3>
 <% @buses.each do |bus|%>
 <div class = 'well'>
@@ -22,3 +24,27 @@
     Not really that close. Time to walk, bike, taxi, Uber, hoverboard, or <%= link_to 'change your location', edit_location_path(@location) %>.
   </h3>
 <% end %>
+
+<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=<%= ENV['google_maps_api_key'] %>"></script>
+
+<script type="text/javascript">
+  function initialize() {
+    var myLocation = new google.maps.LatLng(<%= @location.latitude %>, <%= @location.longitude %>);
+
+    var mapOptions = {
+      center: myLocation,
+      zoom: 15
+    };
+
+    var map = new google.maps.Map(document.getElementById('map-canvas'), mapOptions);
+
+    var myMarker = new google.maps.Marker({
+      position: myLocation,
+      map: map,
+      animation: google.maps.Animation.DROP,
+      title: 'My Location'
+    })
+  }
+
+  google.maps.event.addDomListener(window, 'load', initialize);
+</script>
